# libmagic_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dev.sh
.cargo/: config.toml
libgnurx/: Makefile  config.status  configure
libgnurx/autom4te.cache/: output.0  requests  traces.0
patches/: file_Makefile_am.patch  file_configure_ac.patch
src/: lib.rs
src/magic/: magic_sys.rs  mod.rs
test_case/: build_libgnurx.sh  build_libmagic_cross_windows.sh  dev_linux.sh  dev_win.sh
