[package]
name = "libmagic_rs"
version = "0.1.0"
edition = "2021"
authors = ["kulukami@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.69" }

[dependencies]
thiserror = "1.0"
libc = "0.2"
bitflags = "2.5"

[[bin]]
name = "file"
path = "src/bin/file.rs"
